--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,18 +7,19 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Experience
+  - name: Work Experience
     url: "#experience"
     weight: 20
-  - name: Projects
-    url: '#projects'
+  - name: Publications
+    url: '#featured'
     weight: 30
   - name: Achievements
     url: '#achievements'
     weight: 40
-  - name: Publications
-    url: '#featured'
-    weight: 50
+  - name: Academic Experience
+    url: '#academic_experience'
+    weight: 40
+
   - name: Contact
     url: '#contact'
     weight: 60
