--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -21,10 +21,13 @@ main:
     weight: 50
   - name: Attended
     url: "#attended"
-    weight: 70
+    weight: 60
+  - name: Skills
+    url: "#skills"
+    weight: 60
   - name: Contact
     url: '#contact'
-    weight: 60
+    weight: 80
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
